--- a/TODO
+++ b/TODO
@@ -10,7 +10,7 @@ High priority tasks!
 * konsole part:
   - cd's when selecting a file, but doesn't when selecting a dir
     desired: a menu option to "cd" to that directory
-  - CTRL-C doesn't work
+  - CTRL-C doesn't work, typing ../ does weird things
 
 * UI bugs
   - GUI redraw blocked on Gideon startup for the time of project loading 
@@ -24,6 +24,13 @@ High priority tasks!
   - editor view must detect and warn about changes made outside gideon
   - messages view should hold place when scrolled but new output is
     being added
+  - If you click an error in the output view, "Next Error"/"Previous Error"
+    should then start from that point.
+  - Messages in status bar would look nicer if they appeared with the same
+    border as other items.
+  - Debug menu items not properly enabled/disabled.
+  - Browser tool bar should truncate long menu entries so it doesn't take so
+    much space.
       
 * misc
   - Printing files not supported
@@ -74,13 +81,6 @@ automakemanager:
 4. Small Annoyances
 -------------------
 
-* If you click an error in the output view, "Next Error"/"Previous Error"
-  should then start from that point.
-* Messages in status bar would look nicer if they appeared with the same
-  border as other items.
-* Debug menu items not properly enabled/disabled.
-* Browser tool bar should truncate long menu entries so it doesn't take so
-  much space.
   
 New features
 ============
