--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-22  Walter Tasin <tasin@kdevelop.org>
+    * correcting a problem in using default font, if there is no
+      configuration
+    * giving the possibility to switch to color printing inside
+      kdeveloprc
+    both reviewed by Falk
 2002-06-12  F@lk Brettschneider <falk@kdevelop.org>
     * fixed newly introduced bugs in CMakeOutputView:
       - line wrap is on again (wrapping is cooler than loooong lines!)
