--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2002-06-25  Walter Tasin <tasin@kdevelop.org>
+    * bugfix #44111: CFLAGS and CPPFLAGS don't apply in build process
+    blessed by Roland
 2002-06-22  Walter Tasin <tasin@kdevelop.org>
     * correcting a problem in using default font, if there is no
       configuration
