--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2002-06-28 Matthias Hölzer-Klüpfel <mhk@kde.org>
+	* save and restore the dock mode in IDEAl
+
 2002-06-27  F@lk Brettschneider  <falk@kdevelop.org>
 	* avoid library version clash between qextmdi of Gideon and KDevelop-2.1
 
