--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 		-> ONLY adding existing files works at the moment!
 	* add Björn Sahlström's drag 'n drop support to the FileSelector
 		-> see kfilednd*view.* for details
+	* added new bullets to the make outputview
 	* everything needs a little bit code clean-up, so don't worry :-)
 
 2002-06-28 Matthias Hölzer-Klüpfel <mhk@kde.org>
