--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-07 Victor Röder <victor_roeder@gmx.de>
+	* repaired layouting of some Automake dialogs
+	* adapted the the look of all Autmake dialogs
+	* add blue bullet to the make output view
+
 2002-06-30 Victor Röder <victor_roeder@gmx.de>
 	* continued the import existing dialog
 		-> ONLY adding existing files works at the moment!
