--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-15 Matthias Hölzer-Klüpfel <mhk@kde.org>
+
+	* Exchanged old javasupport part with the beginnings of a new one,
+	* written entirely in C++.
+	
 2002-07-07 Victor Röder <victor_roeder@gmx.de>
 	* repaired layouting of some Automake dialogs
 	* adapted the the look of all Autmake dialogs
