--- a/debian/changelog
+++ b/debian/changelog
@@ -1,24 +1,302 @@
-kdevelop (1:2.0.3b) unstable; urgency=low
+kdevelop (4:2.1.2-0.1) unstable; urgency=low
 
-  * New version.
+  * New upstream version (from CVS)
 
- -- Eray Ozkural (exa) <erayo@cs.bilkent.edu.tr>  Thu, 22 Nov 2001 01:40:05 +0200
+ -- Norman Jordan <njordan@debian.org>  Sun, 30 Jun 2002 01:57:35 -0700
 
-kdevelop (1:2.0b1-2) unstable; urgency=low
+kdevelop (4:2.1.1-3) unstable; urgency=low
 
-  * Renamed debian doc-base entries to standard ones.
+  * Recompiled agains KDE 3.0.2
 
- -- Christian Couder <chcouder@club-internet.fr>  Mon, 23 Jul 2001 22:58:54 +0100
+ -- Norman Jordan <njordan@debian.org>  Thu, 27 Jun 2002 16:57:47 -0700
 
-kdevelop (1:2.0b1-1) unstable; urgency=low
+kdevelop (4:2.1.1-2) unstable; urgency=low
 
-  * New release
-  * don't compress tip database
-  * small fix to find kdelibs docs in setup wizard
-  * split into binary, doc and data packages
-  * added graphviz to suggests
+  * Updated version number to be greater than the KDE 2.2 version of KDevelop
+  * Fixed debian/debianrules to use the correct path to the kdelibs
+    documentation
+  * Now system configuration files are stored in /etc/kde3
 
- -- Eray Ozkural (exa) <erayo@cs.bilkent.edu.tr>  Mon, 23 Jul 2001 20:18:09 +0300
+ -- Norman Jordan <njordan@debian.org>  Sun, 26 May 2002 00:40:30 -0700
+
+kdevelop (3:2.1.1-1) unstable; urgency=low
+
+  * New upstream version, using the sources for KDE 3.0
+  * Compiled for KDE 3.0
+  * Applied previous patches
+  * Updated dependency lists
+
+ -- Norman Jordan <njordan@debian.org>  Thu, 23 May 2002 17:10:39 -0700
+
+kdevelop (3:2.1-kde3.0-1) unstable; urgency=low
+
+  * New source package for KDE 3.0
+  * Compiled for KDE 3.0
+  * Applied my previous patches
+  * Never released
+
+ -- Norman Jordan <njordan@debian.org>  Sun, 19 May 2002 22:52:29 -0700
+
+kdevelop (3:2.1-1) unstable; urgency=low
+
+  * New upstream release
+  * Updated the example htdig.conf to use the correct path to htdig's images
+
+ -- Norman Jordan <njordan@debian.org>  Thu,  4 Apr 2002 12:46:16 -0800
+
+kdevelop (3:2.1-0rc3-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Norman Jordan <njordan@debian.org>  Wed,  3 Apr 2002 04:37:32 -0800
+
+kdevelop (3:2.0.2-5) unstable; urgency=low
+
+  * Added linuxdoc-tools to the suggests field of kdevelop
+  * Added c-cpp-reference to the suggests field of kdevelop (Closes: #139394)
+  * Updated the files README-automake1.5.Debian and README-htdig.Debian
+  * Updated KDevelop setup, so that it will always find the KDE documentation
+    if you have kdelibs3-doc installed
+
+ -- Norman Jordan <njordan@debian.org>  Mon, 25 Mar 2002 15:46:15 -0800
+
+kdevelop (3:2.0.2-4) unstable; urgency=low
+
+  * Recompiled with libpng2-dev (Closes: #128728, #127330)
+  * Added libpng2-dev to the build depends
+  * Can once again index the KDE documentation with htdig
+  * Updated the README-htdig.Debian file
+
+ -- Norman Jordan <njordan@debian.org>  Tue,  8 Jan 2002 18:14:57 -0800
+
+kdevelop (3:2.0.2-3) unstable; urgency=low
+
+  * Now compiles with GCC 3 (Closes: #127865)
+
+ -- Norman Jordan <njordan@debian.org>  Sun,  6 Jan 2002 04:51:52 -0800
+
+kdevelop (3:2.0.2-2) unstable; urgency=low
+
+  * Recompiled against new QT library (Closes: #127330)
+
+ -- Norman Jordan <njordan@debian.org>  Tue,  1 Jan 2002 01:57:49 -0800
+
+kdevelop (3:2.0.2-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Norman Jordan <njordan@debian.org>  Thu, 22 Nov 2001 13:23:36 -0800
+
+kdevelop (3:2.0.1-7) unstable; urgency=low
+
+  * Fixed some ASSERT statements in the source, where a string was passed
+    rather than a boolean value (Closes: #119320)
+
+ -- Norman Jordan <njordan@debian.org>  Tue, 13 Nov 2001 21:37:29 -0800
+
+kdevelop (3:2.0.1-6) unstable; urgency=low
+
+  * Updated debian/rules to automatically delete the file debian/files
+  * Deleted the file debian/file (Closes: #118484)
+  * The package kdevelop-doc was moved to the doc section
+
+ -- Norman Jordan <njordan@debian.org>  Wed,  7 Nov 2001 16:17:18 -0800
+
+kdevelop (3:2.0.1-5) unstable; urgency=low
+
+  * Fixed some Makefile.am's so that automake 1.5 will work on the source
+  * Updated the admin.tar.gz file to work with automake 1.5
+  * The doc package now contains the files conf.change.pl and config.pl so
+    that users can manually update the admin directory of thier projects
+  * Added the file README-automake1.5.Debian to explain how get a project to
+    work with automake 1.5
+
+ -- Norman Jordan <njordan@debian.org>  Mon,  8 Oct 2001 17:27:45 -0700
+
+kdevelop (3:2.0.1-4) unstable; urgency=low
+
+  * Removed the build dependency on automake and autoconf (Closes: #114595)
+
+ -- Norman Jordan <njordan@debian.org>  Sat,  6 Oct 2001 10:20:26 -0700
+
+kdevelop (3:2.0.1-3) unstable; urgency=low
+
+  * Made the sample htdig.conf and the README-htdig.Debian files a little
+    clearer                                                              
+  * Now on Alpha it will compile with the flags -O0 and -mieee
+    (Closes: #114393)
+
+ -- Norman Jordan <njordan@debian.org>  Thu,  4 Oct 2001 11:58:13 -0700
+
+kdevelop (3:2.0.1-2) unstable; urgency=low
+
+  * The doc package now contains an example htdig.conf and the file
+    README-htdig.Debian that explains how to use htdig in KDevelop
+  * The menu item Help -> Search for Help on... will now find htsearch
+    if it is installed in /usr/lib/cgi-bin
+  * Changed the brief descriptions of the doc and data packages
+  * Fixed the setup wizard, it can now index the KDE Documentation if you
+    have kdelibs3-doc installed (Closes: #111837)
+
+ -- Norman Jordan <njordan@debian.org>  Sat, 22 Sep 2001 23:34:11 -0700
+
+kdevelop (3:2.0.1-1) unstable; urgency=low
+
+  * New upstream release
+  * No longer suggests glimpse (Closes: #112468)
+  * Can now find htsearch in /usr/lib/cgi-bin
+  * Alpha no longer requires gcc-3.0 and g++-3.0
+
+ -- Norman Jordan <njordan@debian.org>  Tue, 18 Sep 2001 01:58:21 -0700
+
+kdevelop (3:2.0-final-1.3) unstable; urgency=low
+
+  * The kdevelop package now suggests sgmltools-lite, not sgmltools
+    (Closes: #109067)
+  * Removed suggests fields for both data and doc packages
+  * The doc package now recommends the kdevelop package
+
+ -- Norman Jordan <njordan@debian.org>  Fri, 17 Aug 2001 21:47:43 -0700
+
+kdevelop (3:2.0-final-1.2) unstable; urgency=low
+
+  * Corrected debian/rules file to fix binary-arch target (Closes: #108912)
+
+ -- Norman Jordan <njordan@debian.org>  Thu, 16 Aug 2001 11:09:52 -0700
+
+kdevelop (3:2.0-final-1.1) unstable; urgency=low
+
+  * kdevelop-doc package no longer depends on kdevelop
+
+ -- Norman Jordan <njordan@debian.org>  Wed, 15 Aug 2001 06:51:58 -0700
+
+kdevelop (3:2.0-final-1.0) unstable; urgency=low
+
+  * New upstream version (2.0)
+  * Changed debian/prerm file so that install-docs -r is only run once
+
+ -- Norman Jordan <njordan@debian.org>  Wed, 15 Aug 2001 05:38:30 -0700
+
+kdevelop (2:2.0-0.1pre1-0.1.20010808) unstable; urgency=low
+
+  * Updated CVS sources (2001-08-08)
+  * Changed upstream version to 2.0-0.1pre1
+  * Added kderemove=y to menu file (Closes: #108012)
+  * Added a menu entry for KDevelop setup
+
+ -- Norman Jordan <njordan@debian.org>  Sun,  8 Aug 2001 04:20:27 -0700
+
+kdevelop (2:2.0-0.1.20010801) unstable; urgency=low
+
+  * Updated CVS sources (2001-08-01)
+  * The data and doc packages now replace the 1.4 kdevelop package
+    (Closes: #107343)
+
+ -- Norman Jordan <njordan@debian.org>  Wed,  1 Aug 2001 04:14:15 -0700
+
+kdevelop (2:2.0-0.1.20010731.1) unstable; urgency=low
+
+  * Updated CVS sources (still 2001-07-31)
+  * Updated debian/control and debian/rules to force the use of gcc-3/g++-3
+    on Alpha (Christopher C. Chimelis)
+
+ -- Norman Jordan <njordan@debian.org>  Tue, 31 Jul 2001 21:26:09 -0700
+
+kdevelop (2:2.0-0.1.20010731) unstable; urgency=low
+
+  * Updated CVS sources (2001-07-31)
+  * Added new targets to debian/rules file, to allow building only binary-indep
+    or binary-arch
+  * Corrected dependencies of kdevelop-data
+
+ -- Norman Jordan <njordan@debian.org>  Tue, 31 Jul 2001 02:59:52 -0700
+
+kdevelop (2:2.0-0.1.20010730) unstable; urgency=low
+
+  * Updated CVS sources (2001-07-30)
+
+ -- Norman Jordan <njordan@debian.org>  Mon, 30 Jul 2001 08:44:50 -0700
+
+kdevelop (2:2.0-0.1.20010729.1) unstable; urgency=low
+
+  * Updated CVS sources, still (2001-7-29)
+  * Made scripts in usr/share/apps/kdevelop/tools executable
+
+ -- Norman Jordan <njordan@debian.org>  Sun, 29 Jul 2001 16:32:46 -0700
+
+kdevelop (2:2.0-0.1.20010729) unstable; urgency=low
+
+  * Changed the version of the package
+  * Updated CVS sources (2001-07-29)
+  * Cleaned up debian/rules file
+
+ -- Norman Jordan <njordan@debian.org>  Sun, 29 Jul 2001 02:36:34 -0700
+
+kdevelop (1:1.9.20010727-1) unstable; urgency=low
+
+  * Updated CVS sources
+  * Removed the file /usr/bin/extractrc
+
+ -- Norman Jordan <njordan@debian.org>  Fri, 27 Jul 2001 15:22:42 -0700
+
+kdevelop (1:1.9.20010726-3) unstable; urgency=low
+
+  * No longer using debian/postinst as debian/kdevelop-doc.postinst
+  * No longer using debian/prerm as debian/kdevelop-doc.prerm
+
+ -- Norman Jordan <njordan@debian.org>  Fri, 27 Jul 2001 01:43:30 -0700
+
+kdevelop (1:1.9.20010726-2) unstable; urgency=low
+
+  * Removed dh_shlibdeps and dh_builddeb from binary-arch target of
+    debian/rules
+
+ -- Norman Jordan <njordan@debian.org>  Thu, 26 Jul 2001 19:36:58 -0700
+
+kdevelop (1:1.9.20010726-1) unstable; urgency=low
+
+  * Packaging the 20010726 CVS archive
+
+ -- Norman Jordan <njordan@debian.org>  Thu, 26 Jul 2001 16:44:44 -0700
+
+kdevelop (1:2.0beta1-2) unstable; urgency=low
+
+  * Added dh_makeshlibs to debian/rules file
+
+ -- Norman Jordan <njordan@venom.dyndns.org>  Thu, 26 Jul 2001 04:06:48 -0700
+
+kdevelop (1:2.0beta1-1) unstable; urgency=low
+
+  * New upstream release
+  * Split architecture indep. files into kdevelop-data (Eray Ozkural)
+  * Split documentation into kdevelop-doc (Eray Ozkural)
+
+ -- Norman Jordan <njordan@debian.org>  Tue, 24 Jul 2001 00:35:16 -0700
+
+kdevelop (1:1.4.0-3.7) unstable; urgency=low
+
+  * Put the file README.htdig into /usr/share/doc/kdevelop 
+  * Cleaned up the debian/debianrules file
+  * No longer deletes the menu file after building
+
+ -- Norman Jordan <njordan@debian.org>  Wed, 18 Jul 2001 12:20:52 -0700
+
+kdevelop (1:1.4.0-3.6) unstable; urgency=low
+
+  * Built against KDE 2.2.0-beta1 (Closes: #105321)
+  * Changed use of cp command in debian/debianrules to no longer use -P
+  * Moved the file in /usr/share/doc/docbase to /usr/share/doc/kdevelop
+  * Changed build-depends, removed kdelibs-doc and qt2.2-doc
+
+ -- Norman Jordan <njordan@debian.org>  Mon, 16 Jul 2001 03:56:02 -0700
+
+kdevelop (1:1.4.0-3.5) unstable; urgency=low
+
+  * Removed the x-designer.desktop file (Closes: #103296)
+  * Statically linked libfl.a in with kdevelop (Closes: #103226) 
+  * Removed the x-linguist.desktop file, conflicted with kdelibs3
+
+ -- Norman Jordan <njordan@debian.org>  Tue,  3 Jul 2001 13:49:18 -0700
 
 kdevelop (1:1.4.0-3.4) unstable; urgency=low
 
