--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2002-07-18  Harald Fernengel <harry@kdevelop.org>
+    * Applied debian patches by Norman Jordan <njordan@shaw.ca> 
+    * Applied the OpenBSD compile fix by Craig Barraclough <craigba@creative.com.au>
 2002-06-25  Walter Tasin <tasin@kdevelop.org>
     * bugfix #44111: CFLAGS and CPPFLAGS don't apply in build process
     blessed by Roland
