--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2002-07-18  Roland Krause  <roland@ca.wai.com>
+    * Another fine patch from our friend Kuba Ober. 
+      This one is even completely self-explanatory. 
 2002-07-18  Harald Fernengel <harry@kdevelop.org>
     * Applied debian patches by Norman Jordan <njordan@shaw.ca>
     * Applied the OpenBSD compile fix by Craig Barraclough <craigba@creative.com.au>
