--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-27 Matthias Hölzer-Klüpfel <mhk@kde.org>
+
+	* Added a part for ant based projects.
+	
 2002-07-24 Roberto Raggi <raggi@cli.di.unipi.it>
 	* added a new java parser based on ANTLR
 
