--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-29 Harald Fernengel <harry@kdevelop.org>
+	* Added a part to show diffs either in the widget from Kompare (->KDESDK)
+          or in a QTextEdit if Kompare is not installed.
+	* TODO: Use it in the version management parts and allow applying/reverting of patches
+
 2002-07-27 Matthias Hölzer-Klüpfel <mhk@kde.org>
 
 	* Added a part for ant based projects.
