--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2002-08-02 Harald Fernengel <harry@kdevelop.org>
+	* Changed the diff part from a modal dialog to an outputview
+
 2002-07-30 Harald Fernengel <harry@kdevelop.org>
 	* Added a "diff frontend" to allow other plugins use the diff part.
 	* Implemented it for CVS, so you can now view the differences to the
