--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2002-08-06 Harald Fernengel <harry@kdevelop.org>
+	* AppWizard fix, KDevelop plugin template ported to new architecture
+
 2002-08-05 Matthias Hölzer-Klüpfel <mhk@kde.org>
 	* Removed kdevelop source, to prepare for an alpha release
 
