--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2002-08-09 Victor Röder <victor_roeder@gmx.de>
+	* Applied Sebastian Kratzert's search-extension-diff
+
 2002-08-06 Harald Fernengel <harry@kdevelop.org>
 	* AppWizard fix, KDevelop plugin template ported to new architecture
 
