--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-09  Jakob Simon-Gaarde <jsgaarde@tdcspace.dk>
+  * trollproject:
+	* Done implementing projectconfiguration dialog
+	* Added toolbarbuttons in the project tree
+
 2002-08-09 Victor Röder <victor_roeder@gmx.de>
 	* Applied Sebastian Kratzert's search-extension-diff
 
@@ -8,7 +13,12 @@
 	* Removed kdevelop source, to prepare for an alpha release
 
 2002-08-04 Christian Couder <christian@kdevelop.org>
-	* Fix a few appwizard bugs. 
+	* Fix a few appwizard bugs.
+
+2002-08-03  Jakob Simon-Gaarde <jsgaarde@tdcspace.dk>
+  * trollproject:
+	* Projectconfiguration dialog has been added
+	* Fileproperty dialog added for excluding files in subscopes
 
 2002-08-02 Harald Fernengel <harry@kdevelop.org>
 	* Changed the diff part from a modal dialog to an outputview
