--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,10 @@
+2002-08-11 Victor Röder <victor_roeder@gmx.de>
+	* Applied Sebastian Kratzert's search-extension-diff<2>
+
 2002-08-09  Jakob Simon-Gaarde <jsgaarde@tdcspace.dk>
   * trollproject:
 	* Done implementing projectconfiguration dialog
 	* Added toolbarbuttons in the project tree
-
-2002-08-09 Victor Röder <victor_roeder@gmx.de>
-	* Applied Sebastian Kratzert's search-extension-diff
 
 2002-08-06 Harald Fernengel <harry@kdevelop.org>
 	* AppWizard fix, KDevelop plugin template ported to new architecture
