Credited Yann Hodique

--- a/AUTHORS
+++ b/AUTHORS
@@ -36,6 +36,7 @@ Help with KParts, KGenericFactory and other KDE infrastructure:
 
 Patches:
 domseichter@t-online.de (Dominik Seichter)
+Yann Hodique <Yann.Hodique@lifl.fr>
 
 Other software included in the source package:
 
