--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2002-08-13 Harald Fernengel <harry@bnro.de>
+	* Applied goto next / prev window patch by Yann Hodique
+
 2002-08-11 Victor Röder <victor_roeder@gmx.de>
 	* Applied Sebastian Kratzert's search-extension-diff<2>
 
