--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2002-08-18 Victor Röder <victor_roeder@gmx.de>
+	* Applied Yann Hodique's cvspart patch
+
 2002-08-09  Jakob Simon-Gaarde <jsgaarde@tdcspace.dk>
   * trollproject:
 	* Added toolbar to file tree
