--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-19 Jakob Simon-Gaarde <jsgaarde@tdcspace.dk>
+  * trollproject:
+        * File exclusion on qmake-scope-level now working
+
 2002-08-18 Victor Röder <victor_roeder@gmx.de>
 	* Applied Yann Hodique's cvspart patch
 
