changes and credits

--- a/AUTHORS
+++ b/AUTHORS
@@ -37,6 +37,7 @@ Help with KParts, KGenericFactory and other KDE infrastructure:
 Patches:
 domseichter@t-online.de (Dominik Seichter)
 Yann Hodique <Yann.Hodique@lifl.fr>
+Hornung-Heinz@t-online.de (Heinz Hornung)
 
 Other software included in the source package:
 
