--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2002-08-24 Jakob Simon-Gaarde <jsgaarde@tdcspace.dk>
+	* Applied first simple QMake based project template in appwizard
+
 2002-08-22 Harald Fernengel <harry@kdevelop.org>
 	* applyed patches by Hornung-Heinz@t-online.de (Heinz Hornung):
 	  don't crash on exit
