--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2002-08-26 Harald Fernengel <harry@kdevelop.org>
+	* Better syntax highlighting for "cvs log", added ability to show diffs between versions
+
 2002-08-24 Jakob Simon-Gaarde <jsgaarde@tdcspace.dk>
 	* Applied first simple QMake based project template in appwizard
 
