--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-26 Mickael Marchand <marchand@kde.org>
+  * Added commit dialog to subversion part
+  * Prepared notification system
+
 2002-08-26 Harald Fernengel <harry@kdevelop.org>
 	* Better syntax highlighting for "cvs log", added ability to show diffs between versions
 
