--- a/ChangeLog
+++ b/ChangeLog
@@ -1,12 +1,15 @@
+2002-08-27 Harald Fernengel <harry@kdevelop.org>
+	* Added ability to edit toolbars in SDI mode (IDEAl)
+
 2002-08-26 Mickael Marchand <marchand@kde.org>
-  * Added commit dialog to subversion part
-  * Prepared notification system
+	* Added commit dialog to subversion part
+	* Prepared notification system
 
 2002-08-26 Harald Fernengel <harry@kdevelop.org>
 	* Better syntax highlighting for "cvs log", added ability to show diffs between versions
 
 2002-08-25 Mickael Marchand <marchand@kde.org>
-  * Imported first version of Subversion kpart
+	* Imported first version of Subversion kpart
 
 2002-08-24 Jakob Simon-Gaarde <jsgaarde@tdcspace.dk>
 	* Applied first simple QMake based project template in appwizard
