--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2002-08-27 Harald Fernengel <harry@kdevelop.org>
-	* Added ability to edit toolbars in SDI mode (IDEAl)
+	* Added ability to edit toolbars in SDI and MDI mode
+	* fixed crash on exit (windowmenu part)
 
 2002-08-26 Mickael Marchand <marchand@kde.org>
 	* Added commit dialog to subversion part
