--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2002-08-27 Mickael Marchand <marchand@kde.org>
+  * Subversion kpart:
+    * Notifications displayed in 'Application' view
+    * Prompt dialog (login/pass) added (untested yet)
+    * New SVN functions support : Revert, Status
+    * Removed "SVN:" stuff from logs
+
 2002-08-27 Harald Fernengel <harry@kdevelop.org>
 	* Added ability to edit toolbars in SDI and MDI mode
 	* fixed crash on exit (windowmenu part)
