--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-26 Mickael Marchand <marchand@kde.org>
+  * Subversion kpart:
+    * Added log window to display retrieved logs from repositery
+
 2002-08-27 Mickael Marchand <marchand@kde.org>
   * Subversion kpart:
     * Notifications displayed in 'Application' view
