--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-29 Jakob Simon-Gaarde <jsgaarde@tdcspace.dk>
+  * Trollproject Part
+     * added new project run options widget
+
 2002-08-28 Mickael Marchand <marchand@kde.org>
   * Subversion kpart:
     * Added log window to display retrieved logs from repositery
