--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-30 Jakob Simon-Gaarde <jsgaarde@tdcspace.dk>
+     * removed trollproject runoptionwidget using common lib/project/runoptionswidget
+     * added browse button to common runoptionwidget
+
 2002-08-29 Jakob Simon-Gaarde <jsgaarde@tdcspace.dk>
   * Trollproject Part
      * added new project run options widget
