--- a/TODO
+++ b/TODO
@@ -35,7 +35,8 @@ High priority tasks!
     border as other items.
   - Browser tool bar should truncate long menu entries so it doesn't take so
     much space.
-  - Open last open panel in the sidebars on startup, if possible
+  - Open last open panel in the sidebars on startup, if possible (should be
+    stored in project file, not globally)
   - Tag file creation fails silently if ctags is not installed
 
 * misc:
@@ -126,7 +127,6 @@ Other Issues
 
 * architecture:
   - implement multiple-views per document
-  - load plugins dynamically
 
 * modularity:
   - make the KDevPart template work standalone
