--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2002-08-31 Jakob Simon-Gaarde <jsgaarde@tdcspace.dk>
+     * trollproject - added compiler/linker flags, includepath
+
 2002-08-30 John Firebaugh <jfirebaugh@kde.org>
      * Implemented dynamic loading/unloading of plugins.
        Some project plugins need to be fixed; I guess they expect to
