--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-05 Harald Fernengel <harry@kdevelop.org>
+	* Added notification configuration dialog and notifications
+	  for finished processes (off by default)
+
 2002-08-31 Jakob Simon-Gaarde <jsgaarde@tdcspace.dk>
      * Connected the last toolbar buttons
      * I hereby declare trollprojectpart ready for alpha release :)
