--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2002-09-19 Roberto Raggi <raggi@cli.di.unipi.it>
+	* Improved code completion
+
 2002-09-17 Roberto Raggi <raggi@cli.di.unipi.it>
 	* Added problem reporter to c++ support
 	
