--- a/parts/sourcenav/README
+++ b/parts/sourcenav/README
@@ -1,3 +1,11 @@
+THIS PART IS OBSOLETE
+
+please leave the code until I find time to merge it into
+the history part.
+
+2002-08-10 Harald Fernengel <harry@kdevelop.org>
+
+
 Basic plugin to navigate forward/backwards through code
 
 TODO:
