--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-11 Caleb Tennis <caleb@aei-tech.com>
+	* modified the splashscreen to not stradle multiple screens
+	  with Xinerama installed
+
 2002-10-11 Harald Fernengel <harry@kdevelop.org>
 	* added open recent files action
 	* beautified "add tool dialog"
