--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-10-21 Harald Fernengel <harry@kdevelop.org>
+	* added KSaveAllDialog that is shown if more than
+	  one file is modified and needs to be saved.
+	* Display a nice error message if gideon cannot
+	  find its plugins.
+
 2002-10-14 Victor Röder <victor_roeder@gmx.de>
 	* beautified some dialogs
 	  - cppsupport/cppaddmethoddlgbase.ui
@@ -6,7 +12,7 @@
 	  - autoproject/addservicedlgbase.ui
 	  - autoproject/addsubprojectdlgbase.ui
 	* added README to autoproject directory
-	  
+
 2002-10-11 Caleb Tennis <caleb@aei-tech.com>
 	* modified the splashscreen to not stradle multiple screens
 	  with Xinerama installed
