The patch contains changes in DoctreeViewWidget::searchForItem ( const QString& currentText ) and code to add/remove bookmarks for the folder: "Qt/KDE Libraries (kdoc)".

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-28 Victor Röder <victor_roeder@gmx.de>
+	* applied Sebastian Kratzert's search improvements
+		for the docViewPart
+
 2002-10-28 F@lk Brettschneider <falk@kdevelop.org>
 	* compiles with KDE-3.0.3 again
 	
