--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-30  F@lk Brettschneider <falk@kdevelop.org>
+    * Aber einen hammer noch!!! :-)
+      bugfix: jump-to-error repaired for German translation of gmake's output
+              (in coutputwidget.cpp)
+      
 2002-08-29  Roland Krause  <roland@ca.wai.com>
     * This was it. Thanks to my friends Falk and Harry 
       and to the many other people that made this version 
